CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(IMGUI)

FILE(GLOB_RECURSE SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

ADD_LIBRARY(imgui STATIC ${SRC})

TARGET_INCLUDE_DIRECTORIES(imgui PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
TARGET_LINK_LIBRARIES(imgui PUBLIC glfw)
