CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(BTRC-BUILTIN LANGUAGES CXX)

FILE(GLOB_RECURSE CPP_SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

SET(SRC ${CPP_SRC})

ADD_LIBRARY(BtrcBuiltin STATIC ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/btrc/builtin" "" _GRP_PATH "${SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

BTRC_SET_CXX_LANG_VERSION(BtrcBuiltin)

SET_PROPERTY(TARGET BtrcBuiltin PROPERTY CUDA_STANDARD 17)
SET_PROPERTY(TARGET BtrcBuiltin PROPERTY CUDA_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET BtrcBuiltin PROPERTY CUDA_ARCHITECTURES OFF)

TARGET_COMPILE_OPTIONS(BtrcBuiltin PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:--use_fast_math>)

TARGET_INCLUDE_DIRECTORIES(BtrcBuiltin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

TARGET_LINK_LIBRARIES(BtrcBuiltin PUBLIC BtrcCore BtrcFactory)
