CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(BTRC-CLI)

FILE(GLOB_RECURSE SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

ADD_EXECUTABLE(BtrcCLI ${SRC})

SET_PROPERTY(TARGET BtrcCLI PROPERTY CXX_STANDARD 20)
SET_PROPERTY(TARGET BtrcCLI PROPERTY CXX_STANDARD_REQUIRED ON)

IF(MSVC)
    SET_PROPERTY(
        TARGET BtrcCLI
        PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
ENDIF()

TARGET_LINK_LIBRARIES(BtrcCLI PUBLIC BtrcCore)
