CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(BTRC-CLI)

FILE(GLOB_RECURSE SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

ADD_EXECUTABLE(BtrcCLI ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}" "src" _GRP_PATH "${SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

BTRC_SET_CXX_LANG_VERSION(BtrcCLI)

IF(MSVC)
    SET_PROPERTY(
        TARGET BtrcCLI
        PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
ENDIF()

TARGET_LINK_LIBRARIES(BtrcCLI PUBLIC BtrcBuiltin)
