CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(BTRC-COMMON LANGUAGES CXX)

FILE(GLOB_RECURSE CPP_SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

SET(SRC ${CPP_SRC})

ADD_LIBRARY(BtrcCommon STATIC ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/btrc/utils" "src" _GRP_PATH "${SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/btrc" "" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

BTRC_SET_CXX_LANG_VERSION(BtrcCommon)

TARGET_COMPILE_DEFINITIONS(BtrcCommon PUBLIC NOMINMAX)

IF(NOT DEFINED Optix_DIR)
    MESSAGE(FATAL_ERROR "Optix_DIR is not specified")
ENDIF()

TARGET_INCLUDE_DIRECTORIES(BtrcCommon PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${Optix_DIR}/include")

TARGET_LINK_LIBRARIES(BtrcCommon PUBLIC cuj stb tinyexr tinyobjloader CUDA::cudart fmt::fmt)
