CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(BTRC-FACTORY LANGUAGES CXX)

FILE(GLOB_RECURSE CPP_SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

SET(SRC ${CPP_SRC})

ADD_LIBRARY(BtrcFactory STATIC ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/inc/btrc/factory" "inc" _GRP_PATH "${SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

IF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    # work around for https://github.com/microsoft/STL/issues/1814
    SET_PROPERTY(TARGET BtrcFactory PROPERTY CXX_STANDARD 23)
    TARGET_COMPILE_DEFINITIONS(BtrcFactory PUBLIC _CRT_SECURE_NO_WARNINGS)
ELSE()
    SET_PROPERTY(TARGET BtrcFactory PROPERTY CXX_STANDARD 20)
ENDIF()
SET_PROPERTY(TARGET BtrcFactory PROPERTY CXX_STANDARD_REQUIRED ON)

TARGET_INCLUDE_DIRECTORIES(BtrcFactory PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc")

TARGET_LINK_LIBRARIES(BtrcFactory PUBLIC BtrcCore nlohmann-json)
