CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(BTRC-FACTORY LANGUAGES CXX)

FILE(GLOB_RECURSE CPP_SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

SET(SRC ${CPP_SRC})

ADD_LIBRARY(BtrcFactory STATIC ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/btrc/factory" "src" _GRP_PATH "${SRC}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

BTRC_SET_CXX_LANG_VERSION(BtrcFactory)

TARGET_INCLUDE_DIRECTORIES(BtrcFactory PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

TARGET_LINK_LIBRARIES(BtrcFactory PUBLIC BtrcCore nlohmann-json)
