CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(BTRC-GUI)

FILE(GLOB_RECURSE SRC
		"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

ADD_EXECUTABLE(BtrcGUI ${SRC})

IF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    # work around for https://github.com/microsoft/STL/issues/1814
    SET_PROPERTY(TARGET BtrcGUI PROPERTY CXX_STANDARD 23)
ELSE()
    SET_PROPERTY(TARGET BtrcGUI PROPERTY CXX_STANDARD 20)
ENDIF()
SET_PROPERTY(TARGET BtrcGUI PROPERTY CXX_STANDARD_REQUIRED ON)

IF(MSVC)
    SET_PROPERTY(
        TARGET BtrcGUI
        PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/")
ENDIF()

TARGET_LINK_LIBRARIES(BtrcGUI PUBLIC BtrcBuiltin OpenGL::GL glfw glew_s)
